# TwoCompMix

./: .gitignore  LICENSE  README.md  gtmix_linear.rds  gtmix_linear.stan  pyproject.toml  requirements.txt  setup.py
TwoCompMix/: api.py
src/TwoCompMix/: api.py
tests/: test_glm.py  test_survival.py
